@@ -5,8 +5,9 @@ apport (0.124) UNRELEASED; urgency=low
     use "touch -m" which fails with EPERM on directories under
     fakechroot. Also disable gconf-schemas and polkit-auth, since they
     do not work in fakechroots.
+  * apport/crashdb_impl/launchpad.py: Allow using staging for testing.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 07 Jan 2009 19:21:09 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 08 Jan 2009 12:36:58 +0100
 
 apport (0.123) jaunty; urgency=low
 
